--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@ if (seconds < 10) {
     hours = '0' + hours;
   }
 
-var clockFace = hours + ':' + minutes + '^' + seconds;
-   var hexColor = '#' + minutes + 'ff' + hours;
+var clockFace = hours + ':' + minutes + ':' + seconds;
+   var hexColor = '#' + hours + minutes + seconds;
 document.getElementById('clock').innerHTML = clockFace; 
   document.body.style.background = hexColor;
    setTimeout(function() {
